--- a/Iris Flower Classification.ipynb
+++ b/Iris Flower Classification.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dataset https://drive.google.com/file/d/11Iq7YvbWZbt8VXjfm06brx66b10YiwK-/view",
-    
+    "#dataset https://drive.google.com/file/d/11Iq7YvbWZbt8VXjfm06brx66b10YiwK-/view\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
